2002-07-16  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_register)  Add missing semicolon.

2002-07-16  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (s_expire): Expire recursively.  Attempt to
	delete session directories as well.

2002-07-14  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (s_recognize): Look for the session in the
	appropriate subdirs as well.  Return the full path to the session
	and other useful info.  Take a flag to turn off file existence
	checks and just check the form of the session (and return a full
	pathname).
	
	(connect): Make session subdirs as necessary.
	(sessioninfo_start): Look where s_recognize says to look instead
	of in a hardcoded directory.

2002-07-12  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/CommandProps.pm: Add nofarewell mode.

	* lib/Majordomo.pm (_unsubscribe): Call welcome() with the
	appropriate data to send a farewell message if needed.

2002-07-11  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/mj_cf_defs.pl: Add defaults for farewell and farewell_files
	settings.

	* lib/mj_cf_data.pl: Add farewell and farewell_files settings.

	* lib/Majordomo.pm (_register, _subscribe): Pass the GLOBAL
	welcome_files setting to welcome().

	* lib/Mj/MailOut.pm (welcome): Take the file table as an argument.

2002-07-10  Jason Tibbitts  <tibbs@math.uh.edu>

	* bin/mj_shell (parse_command): New "default" action: debug, sets
	debug level.
	(debug_log): New function: set up a debug log and change its level.

2002-07-10  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  Display the validation error message if a
	list name is invalid.

	* lib/Majordomo.pm:  (standard_subs)  Cope with relocated
	lists.
	(format_get_string)  Bugfix:  Validate the list name.
	Thanks to Roger Klorese.

2002-07-09  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (standard_subs): Add the DATE substitution.  No
	reason it can't be available everywhere.

	* lib/Mj/Resend.pm (post): Remove DATE substitution.
