@@ -1,3 +1,9 @@
+2002-07-19  Jason L Tibbitts III  <tibbs@math.uh.edu>
+
+	* lib/Majordomo.pm (connect): Add modes to mkdir calls to appease
+	old versions of Perl.  When trying to make directories a second
+	time, add some debugging output.
+
 2002-07-16  Michael Yount <csf@moscow.com>
 
 	* lib/Majordomo.pm:  (_register)  Add missing semicolon.
